// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-dashed border-theme-neutral-200 text-theme-neutral-700"
        data-testid="PluginListItem--ark-explorer"
      >
        <td
          class="text-center"
        >
          <svg
            class="w-12 h-12"
          >
            changenow-logo.svg
          </svg>
        </td>
        <td>
          <a
            class="font-semibold text-theme-primary-500 hover:text-theme-primary-400"
            href="#"
          >
            ARK Explorer
          </a>
        </td>
        <td>
          <div
            class="flex items-center justify-between pr-16"
          >
            <span>
              ARK.io
            </span>
            <div />
          </div>
        </td>
        <td
          class="py-10"
        >
          Utility
        </td>
        <td
          class="py-10"
        >
          <div
            class="flex"
            data-testid="ReviewRating"
          >
            <div
              class="relative my-auto"
            >
              <div
                class="absolute overflow-hidden"
                style="width: 80%;"
              >
                <svg
                  class="text-theme-warning-300 w-3"
                >
                  star.svg
                </svg>
              </div>
              <svg
                class="text-theme-neutral-500 w-3"
              >
                star.svg
              </svg>
            </div>
            <span
              class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
            >
              4.2
            </span>
          </div>
        </td>
        <td
          class="py-10"
        >
          v 1.3.8
        </td>
        <td
          class="py-10"
        >
          4.2 MB
        </td>
        <td
          class="flex py-10"
        >
          <div
            class="flex w-6 h-6 mx-auto"
          >
            <div
              class="m-auto text-theme-neutral-500"
            >
              <div
                class="sc-AxirZ fkjLBb"
                height="15"
                width="15"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16 text-right"
        >
          <button
            class="sc-AxjAm ddJBbC"
            color="primary"
            data-testid="PluginListItem__install"
            type="button"
          >
            Install
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render grant icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-dashed border-theme-neutral-200 text-theme-neutral-700"
        data-testid="PluginListItem--ark-explorer"
      >
        <td
          class="text-center"
        >
          <svg
            class="w-12 h-12"
          >
            changenow-logo.svg
          </svg>
        </td>
        <td>
          <a
            class="font-semibold text-theme-primary-500 hover:text-theme-primary-400"
            href="#"
          >
            ARK Explorer
          </a>
        </td>
        <td>
          <div
            class="flex items-center justify-between pr-16"
          >
            <span>
              ARK.io
            </span>
            <div>
              <div
                class="sc-AxirZ eEbZjj"
                height="20"
                width="20"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="py-10"
        >
          Utility
        </td>
        <td
          class="py-10"
        >
          <div
            class="flex"
            data-testid="ReviewRating"
          >
            <div
              class="relative my-auto"
            >
              <div
                class="absolute overflow-hidden"
                style="width: 80%;"
              >
                <svg
                  class="text-theme-warning-300 w-3"
                >
                  star.svg
                </svg>
              </div>
              <svg
                class="text-theme-neutral-500 w-3"
              >
                star.svg
              </svg>
            </div>
            <span
              class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
            >
              4.2
            </span>
          </div>
        </td>
        <td
          class="py-10"
        >
          v 1.3.8
        </td>
        <td
          class="py-10"
        >
          4.2 MB
        </td>
        <td
          class="flex py-10"
        >
          <div
            class="flex w-6 h-6 mx-auto"
          >
            <div
              class="m-auto text-theme-neutral-500"
            >
              <div
                class="sc-AxirZ fkjLBb"
                height="15"
                width="15"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16 text-right"
        >
          <button
            class="sc-AxjAm ddJBbC"
            color="primary"
            data-testid="PluginListItem__install"
            type="button"
          >
            Install
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render official icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-dashed border-theme-neutral-200 text-theme-neutral-700"
        data-testid="PluginListItem--ark-explorer"
      >
        <td
          class="text-center"
        >
          <svg
            class="w-12 h-12"
          >
            changenow-logo.svg
          </svg>
        </td>
        <td>
          <a
            class="font-semibold text-theme-primary-500 hover:text-theme-primary-400"
            href="#"
          >
            ARK Explorer
          </a>
        </td>
        <td>
          <div
            class="flex items-center justify-between pr-16"
          >
            <span>
              ARK.io
            </span>
            <div>
              <div
                class="sc-AxirZ iOZZCn"
                height="18"
                width="18"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="py-10"
        >
          Utility
        </td>
        <td
          class="py-10"
        >
          <div
            class="flex"
            data-testid="ReviewRating"
          >
            <div
              class="relative my-auto"
            >
              <div
                class="absolute overflow-hidden"
                style="width: 80%;"
              >
                <svg
                  class="text-theme-warning-300 w-3"
                >
                  star.svg
                </svg>
              </div>
              <svg
                class="text-theme-neutral-500 w-3"
              >
                star.svg
              </svg>
            </div>
            <span
              class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
            >
              4.2
            </span>
          </div>
        </td>
        <td
          class="py-10"
        >
          v 1.3.8
        </td>
        <td
          class="py-10"
        >
          4.2 MB
        </td>
        <td
          class="flex py-10"
        >
          <div
            class="flex w-6 h-6 mx-auto"
          >
            <div
              class="m-auto text-theme-neutral-500"
            >
              <div
                class="sc-AxirZ fkjLBb"
                height="15"
                width="15"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16 text-right"
        >
          <button
            class="sc-AxjAm ddJBbC"
            color="primary"
            data-testid="PluginListItem__install"
            type="button"
          >
            Install
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should trigger delete 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-dashed border-theme-neutral-200 text-theme-neutral-700"
        data-testid="PluginListItem--ark-explorer"
      >
        <td
          class="text-center"
        >
          <svg
            class="w-12 h-12"
          >
            changenow-logo.svg
          </svg>
        </td>
        <td>
          <a
            class="font-semibold text-theme-primary-500 hover:text-theme-primary-400"
            href="#"
          >
            ARK Explorer
          </a>
        </td>
        <td>
          <div
            class="flex items-center justify-between pr-16"
          >
            <span>
              ARK.io
            </span>
            <div />
          </div>
        </td>
        <td
          class="py-10"
        >
          Utility
        </td>
        <td
          class="py-10"
        >
          <div
            class="flex"
            data-testid="ReviewRating"
          >
            <div
              class="relative my-auto"
            >
              <div
                class="absolute overflow-hidden"
                style="width: 80%;"
              >
                <svg
                  class="text-theme-warning-300 w-3"
                >
                  star.svg
                </svg>
              </div>
              <svg
                class="text-theme-neutral-500 w-3"
              >
                star.svg
              </svg>
            </div>
            <span
              class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
            >
              4.2
            </span>
          </div>
        </td>
        <td
          class="py-10"
        >
          v 1.3.8
        </td>
        <td
          class="py-10"
        >
          4.2 MB
        </td>
        <td
          class="flex py-10"
        >
          <div
            class="flex w-6 h-6 mx-auto border-2 rounded-full border-theme-success-200 text-theme-success-500"
          >
            <div
              class="m-auto"
            >
              <div
                class="sc-AxirZ fkjLBb"
                height="15"
                width="15"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16 text-right"
        >
          <button
            class="sc-AxjAm kwTlRm text-left"
            color="primary"
            type="button"
          >
            <div
              class="text-left"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="float-right outline-none focus:outline-none"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should trigger install 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-dashed border-theme-neutral-200 text-theme-neutral-700"
        data-testid="PluginListItem--ark-explorer"
      >
        <td
          class="text-center"
        >
          <svg
            class="w-12 h-12"
          >
            changenow-logo.svg
          </svg>
        </td>
        <td>
          <a
            class="font-semibold text-theme-primary-500 hover:text-theme-primary-400"
            href="#"
          >
            ARK Explorer
          </a>
        </td>
        <td>
          <div
            class="flex items-center justify-between pr-16"
          >
            <span>
              ARK.io
            </span>
            <div />
          </div>
        </td>
        <td
          class="py-10"
        >
          Utility
        </td>
        <td
          class="py-10"
        >
          <div
            class="flex"
            data-testid="ReviewRating"
          >
            <div
              class="relative my-auto"
            >
              <div
                class="absolute overflow-hidden"
                style="width: 80%;"
              >
                <svg
                  class="text-theme-warning-300 w-3"
                >
                  star.svg
                </svg>
              </div>
              <svg
                class="text-theme-neutral-500 w-3"
              >
                star.svg
              </svg>
            </div>
            <span
              class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
            >
              4.2
            </span>
          </div>
        </td>
        <td
          class="py-10"
        >
          v 1.3.8
        </td>
        <td
          class="py-10"
        >
          4.2 MB
        </td>
        <td
          class="flex py-10"
        >
          <div
            class="flex w-6 h-6 mx-auto"
          >
            <div
              class="m-auto text-theme-neutral-500"
            >
              <div
                class="sc-AxirZ fkjLBb"
                height="15"
                width="15"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16 text-right"
        >
          <button
            class="sc-AxjAm ddJBbC"
            color="primary"
            data-testid="PluginListItem__install"
            type="button"
          >
            Install
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
